updated reception,added Camera,Etiketka,ExpedDoc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,107 @@
     <string name="checkbox">example.sunny.functioncheck.checkbox</string>
     <string name="email">example.sunny.functioncheck.email</string>
     <string name="password">example.sunny.functioncheck.password</string>
+    <string name="constant">Республика Казахстан
+    050026, г. Алматы, ул. Нурмакова 1/1, оф. 208
+    +7 727 221 93 99, 8 800 080 0101
+    www.glotus.kz</string>
+    <string name="qwer">Экспедиторская расписка</string>
+    <string name="generate">Generate</string>
+    <string name="expedNumber">ALA000000</string>
+    <string name="date">Дата, время</string>
+    <string name="dateFill">10.02.2018</string>
+    <string name="marshrut">Маршрут отправки</string>
+    <string name="marshFill1">Москва(MOW)</string>
+    <string name="marshFill2">Астана(TSE)</string>
+    <string name="tere">-</string>
+    <string name="gruzootpravitel">Грузоотправитель</string>
+    <string name="naimenovanie">Наименование</string>
+    <string name="naimenovanieаFill">ООО СПЕЦЭКСПО</string>
+    <string name="adres">Адрес</string>
+    <string name="adresFill">Москва(MOW)</string>
+    <string name="contact">Телефон, контактное лицо</string>
+    <string name="contactFill">тел.</string>
+    <string name="gruzopoluchatel">Грузополучатель</string>
+    <string name="naimenPoluch">Наименование</string>
+    <string name="naimenPoluchFill">ИП Магжан / Бозекенов Т.</string>
+    <string name="adressPolusch">Адрес</string>
+    <string name="adressPoluchFill">Актюбинск (AKX)</string>
+    <string name="contactPoluch">Телефон, контактное лицо</string>
+    <string name="contactPoluchFill">тел.</string>
+    <string name="platelshik">Плательщик</string>
+    <string name="platelshikFill">ИП Магжан / Бозекенов Т.</string>
+    <string name="datagruz">Данные о грузе</string>
+    <string name="naimenGruz">Наименование</string>
+    <string name="naimenGruzFill">Спецодежда</string>
+    <string name="characterGruz">Характеристика груза</string>
+    <string name="characterGruzFill">Глотус</string>
+    <string name="kolvoMest">Количество мест</string>
+    <string name="kolvoMestFill">35</string>
+    <string name="upakovka">Упаковка</string>
+    <string name="vesObiem">Заявленный вес и объем</string>
+    <string name="ves">468</string>
+    <string name="vesFill">кг</string>
+    <string name="obiem">4,89</string>
+    <string name="obiemFill">м3</string>
+    <string name="dopUslugi">Дополнительные услуги</string>
+    <string name="osobOtmExp">Особые отметки экспедитора</string>
+    <string name="soprDoc">Сопроводительные документы</string>
+    <string name="longText">Груз принят по количеству мест, вся ответственность за достоверность указанных
+                            в товаросопроводительных документах данных, а так же завнутреннее состояние груза,
+                            возлагается на грузоотправителя или его уполномоченное лицо, передавшее груз к перевозке.</string>
+    <string name="longText1">Экспедитор не несет ответстевенности за внутреннее содержание, если по внешним признакам отсутствуют
+                            следы вскрытия (повреждения) упаковки (тары).</string>
+    <string name="longText2">Грузоотправитель гарантирует, что в отправляемом нрузе отсутсвует:</string>
+    <string name="longText3">опасные грузы (вне зависимости от класса опасности), наркосодержащие вещества, грузы не прошедшие
+                            таможенное оформление, иные грузы, запрещенные для принятия к перевозке.</string>
+    <string name="wait_button">Waiting</string>
+    <string name="accepted_button">Accepted</string>
+    <string name="error_button">Error</string>
+    <string name="data_tb">Дата</string>
+    <string name="num_tb">Номер</string>
+    <string name="zakNum_tb">Номер заказа</string>
+    <string name="amount_fact">Количество Факт:</string>
+    <string name="ves_fact">Вес факт:</string>
+    <string name="vol_fact">Объем Факт:</string>
+    <string name="uparovka">Упаковка:</string>
+    <string name="damaged">Груз поврежден</string>
+    <string name="zakazchik">Отправитель</string>
+    <string name="otpravitel">Отправитель:</string>
+    <string name="cont">ООО СПЕЦЭКСПО</string>
+    <string name="manager">Менеджер:</string>
+    <string name="podrazdel">Подразделение:</string>
+    <string name="admin">Администратор</string>
+    <string name="city">Алматы</string>
+    <string name="coment">Комент:</string>
+    <string name="transport">Транспорт:</string>
+    <string name="eticet_button">Этикетка</string>
+    <string name="form_button">Форма</string>
+    <string name="take_photo">Take photo</string>
+    <string name="pathText">Path of photo:</string>
+    <string name="nameText">Name of picture:</string>
+    <string name="name">Name of picture</string>
+    <string name="path">Path of picture:</string>
+    <string name="sop">Сопр док:</string>
+    <string name="fromCity">Город откуда</string>
+    <string name="toCity">Город куда</string>
+    <string name="otkuda">откуда</string>
+    <string name="kuda">куда</string>
+    <string name="poluchatel">Получатель:</string>
+    <string name="otpavitelImya">имя отправителя</string>
+    <string name="poluchatelImya">имя получателя</string>
+    <string name="podpis">Подпись:</string>
+    <string name="kolvoMestEt">Количество мест:</string>
+    <string name="kolvoField">количество мест</string>
+    <string name="vesEt">Вес:</string>
+    <string name="vesField">вес</string>
+    <string name="obiemEt">Объем:</string>
+    <string name="obiemField">объем</string>
+    <string name="typeTrans">Вид транспорта:</string>
+    <string name="transField">транспорт</string>
+    <string name="rasp">Распечатал:</string>
+    <string name="raspField">распеч.</string>
+    <string name="numZakField">ном.Заказа</string>
+    <string name="dateZakField">дата</string>
+    <string name="mesto">Место:</string>
+    <string name="mestoField">места</string>
 </resources>
