--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GlotusAppFinalw</string>
+    <string name="app_name">GlotusAppFinal</string>
     <string name="checkbox">example.sunny.functioncheck.checkbox</string>
     <string name="email">example.sunny.functioncheck.email</string>
     <string name="password">example.sunny.functioncheck.password</string>
