data in exped changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,37 +13,37 @@
     <string name="date">Дата, время</string>
     <string name="dateFill">10.02.2018</string>
     <string name="marshrut">Маршрут отправки</string>
-    <string name="marshFill1">Москва(MOW)</string>
-    <string name="marshFill2">Астана(TSE)</string>
+    <string name="marshFill1">нет данных</string>
+    <string name="marshFill2">нет данных</string>
     <string name="tere">-</string>
     <string name="gruzootpravitel">Грузоотправитель</string>
     <string name="naimenovanie">Наименование</string>
-    <string name="naimenovanieаFill">ООО СПЕЦЭКСПО</string>
+    <string name="naimenovanieаFill">нет данных</string>
     <string name="adres">Адрес</string>
-    <string name="adresFill">Москва(MOW)</string>
+    <string name="adresFill">нет данных</string>
     <string name="contact">Телефон, контактное лицо</string>
-    <string name="contactFill">тел.</string>
+    <string name="contactFill">тел. нет данных</string>
     <string name="gruzopoluchatel">Грузополучатель</string>
     <string name="naimenPoluch">Наименование</string>
-    <string name="naimenPoluchFill">ИП Магжан / Бозекенов Т.</string>
+    <string name="naimenPoluchFill">нет данных</string>
     <string name="adressPolusch">Адрес</string>
-    <string name="adressPoluchFill">Актюбинск (AKX)</string>
+    <string name="adressPoluchFill">нет данных</string>
     <string name="contactPoluch">Телефон, контактное лицо</string>
-    <string name="contactPoluchFill">тел.</string>
+    <string name="contactPoluchFill">тел. нет данных</string>
     <string name="platelshik">Плательщик</string>
-    <string name="platelshikFill">ИП Магжан / Бозекенов Т.</string>
+    <string name="platelshikFill">нет данных</string>
     <string name="datagruz">Данные о грузе</string>
     <string name="naimenGruz">Наименование</string>
-    <string name="naimenGruzFill">Спецодежда</string>
+    <string name="naimenGruzFill">нет данных</string>
     <string name="characterGruz">Характеристика груза</string>
-    <string name="characterGruzFill">Глотус</string>
+    <string name="characterGruzFill">нет данных</string>
     <string name="kolvoMest">Количество мест</string>
-    <string name="kolvoMestFill">35</string>
-    <string name="upakovka">Упаковка</string>
+    <string name="kolvoMestFill">нет данных</string>
+    <string name="upakovka">нет данных</string>
     <string name="vesObiem">Заявленный вес и объем</string>
-    <string name="ves">468</string>
+    <string name="ves">нет данных</string>
     <string name="vesFill">кг</string>
-    <string name="obiem">4,89</string>
+    <string name="obiem">нет данных</string>
     <string name="obiemFill">м3</string>
     <string name="dopUslugi">Дополнительные услуги</string>
     <string name="osobOtmExp">Особые отметки экспедитора</string>
